# Winter2017

./: .gitignore  PerkLab-PresentationTemplate-2017.pptx  Schedule.docx
CISC472/Homework/HW01_24/: CMakeLists.txt
CISC472/Homework/HW01_24/ExampleModule/: CMakeLists.txt  ExampleModule.py
CISC848/BackgroundPentation/: CVSSeqn.txt  ChurchCISC848Background.pptx
CISC848/BackgroundPresentation/: ChurchCISC848Background.pptx
CISC848/Implementation/: ChurchCvssOptimization.docx  GenEqnParam.py  IccParameters.csv  Metrics.csv  PredictionResults.csv  ReadMe.txt  RrParameters.csv  boxPlot.py  curls2vectors.py  cvedb2curls.py  fMeasureParameters.csv  nvd2IdVector.py  optimizationResults.csv  optimizeParameters.py  predictExploits.py  scatterPlot.py  selectFromCsv.py  vectors2metrics.py
CISC848/ProposalPresentation/: CvssOptimizationProposal mohammed1.pptx  CvssOptimizationProposal.pptx  CvssRecastingProposal.pptx
CISC848/ProposalReport/: CISC848ProjectProposal.docx
CISC848/PythonHtmlParser/: myParser.py
CISC848/PythonTxtToCsv/: Txt2Csv.py
CISC848/curl-7.52.1/: manual.txt
CISC870/Assignment/: Assignment10006197.docx
CISC870/AutoPilot/: MakeTransform.py
CISC870/BalanceImplementation/: BalanceBot.py  BalanceRod.py  FuzzyLogic.py  Main.py
CISC870/Implementaton/FuzzyHelicopterPilot/: CMakeLists.txt
CISC870/Implementaton/FuzzyHelicopterPilot/HelicopterBuilder/: HelicopterBuilder.py
CISC870/Paper/: ChurchRobotNavigation.docx  FigureCreation.pptx
CISC870/Papers/: Cuesta2003Summary.docx  Fuzzy Logic Based Navigation of Mobile Robots Summary.docx  Li2015Summary.docx  Luengo2012Summary.docx  Seraji2002Summary.docx  Yang2005Summary.docx
CISC870/Presentation/: Church.pptx  CrispBehavior.xlsx  Full Arena Two Bots RFID Report.docx
ImNO2017/: ChurchImNO2017NeuralNets.docx  ChurchImNO2017Visualization.docx  ChurchImNO2017Visualization_v01.docx  ChurchImNO2017Visualization_v03.docx
ImNO2017/Abstract/: ChurchImNO2017Visualization_v02.docx
ImNO2017/Data/: Registered020.vtp
ImNO2017/Images/: FigureCreation.pptx
ImNO2017/Poster/: Church2017b-poster.pptx  ChurchSpinalVisualization.pptx  ChurchSpinalVisualization_v01.pptx  ChurchSpinalVisualization_v01BlueSilver.pptx  ChurchSpinalVisualization_v02.pptx  ChurchSpinalVisualization_v03.pptx  ChurchSpinalVisualization_v04.pptx  ChurchSpinalVisualization_v05.pptx  ChurchSpinalVisualization_v06.pptx  ChurchSpinalVisualization_v07.pptx  ChurchSpinalVisualization_v08.pptx  ChurchSpinalVisualization_v09.pptx  ChurchSpinalVisualization_v10.pptx  ChurchSpinalVisualization_v11.pptx  FigureCreation.pptx  Guidelines.txt  PerkLab-PosterTemplate-2016.pptx
LandmarkRegistrationStudy/.svn/: wc.db
LandmarkRegistrationStudy/ModelToPatientRegistration/: ModelToPatientRegistration.py
LandmarkRegistrationStudy1/.svn/: wc.db
MICCAI2017/BatchLabelmapSegmentation/: BatchLabelmapSegmentation.py
MICCAI2017/BatchMetricCapture/: BatchMetricCapture.py
MICCAI2017/BatchRegistrationAndWarping/: RegisterPointsAndDeformModels.py
MICCAI2017/BatchRegistrationPointGeneration/: GenerateAllRegistrationPoints.py
MICCAI2017/Data/: Compare007_028Scene.mrml  (+23 more)
PaperGrabber/: TitlesIDs.csv  curlPapers.bat  xmlFeed2TitleIDs.py
PerkTutor/: BlankPhantom.asm  BlankPhantom.cfg  BlankPhantom.stl  PhantomBase.par  PhantomScreen.par
ScoliosisLearning/: 0bc15Presentation.pptx  0bc15PresentationKM.pptx  13_01Presentation.pptx  DataPipeline.pptx
ScoliosisLearning/ScoliosisNeuralNets/: CMakeLists.txt
ScoliosisLearning/ScoliosisNeuralNets/CenterAndNormalizeLandmarks/: CMakeLists.txt  CenterAndNormalizeLandmarks.py
ScoliosisLearning/ScoliosisNeuralNets/DegradeTransverseProcesses/: CMakeLists.txt  DegradeTransverseProcesses.py
ScoliosisLearning/ScoliosisNeuralNets/ExtendSpine/: ExtendSpine.py
ScoliosisLearning/ScoliosisNeuralNets/RepairMissingPoints/: CMakeLists.txt  RepairMissingPoints.py
(+6378 files in other folders)
